Social links wrap fix

--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,10 @@ body {
 }
 
 .headline-social-media-icons {
-  height: 20;
-  width: 171;
+  list-style: none;
+  height: 20px;
+  width: 170px;
+  display: flex;
+  gap: 16px;
+  padding-inline-start: 0;
 }
